# StockFetch

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
duops/: test_dump_2025-03-16.csv
src/legacy/: enums.py  serve.py  tests.py
src/stockfetch/api/: NSE_Client.py
src/stockfetch/core/: data_api_client.py
tests/: test-script.py
